# simple-wayland-client

./: Cargo.toml  README.md
src/: bin.rs  client.rs  dispatch.rs  error.rs  lib.rs  main.rs  wl_client.rs
