[package]
name = "wayland_simple_client"
version = "0.1.1"
edition = "2024"

[lib]
name = "wayland_simple_client"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/bin.rs"

[dependencies]
rand = "0.9.2"
tempfile = "3.21.0"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client"] }
